<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/logo_tentacle"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:animateLayoutChanges="true"
            tools:context="br.com.concrete.tentacle.features.lendgame.LendGameActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <br.com.concrete.tentacle.custom.GameView
                    android:layout_margin="@dimen/margin_default"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/gameView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            <include
                    android:id="@+id/dashed"
                    layout="@layout/dashed_include"
                    app:layout_constraintTop_toBottomOf="@id/gameView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_10"/>

            <TextView
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:id="@+id/tvReservado"
                    style="@style/StyleTextViewLendGame.UserTextHeavy"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:text="@string/requested_by"
                    app:layout_constraintTop_toBottomOf="@id/dashed"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                    android:id="@+id/tvRequestedBy"
                    style="@style/StyleTextViewLendGame.UserTextHeavy.WithShape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    tools:text="NOME DO SOLICI"
                    app:layout_constraintHorizontal_bias="0"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvReservado"
                    app:layout_constraintStart_toStartOf="@id/tvReservado"
                    app:layout_constraintEnd_toStartOf="@+id/tvDateRequested"
                    app:layout_constrainedWidth="true"/>

            <TextView
                    android:lines="1"
                    android:id="@+id/tvDateRequested"
                    style="@style/StyleTextViewLendGame.UserTextMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/date_return_prefix"
                    app:layout_constraintTop_toTopOf="@+id/tvRequestedBy"
                    app:layout_constraintBottom_toBottomOf="@+id/tvRequestedBy"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/margin_default"/>

            <TextView
                    android:id="@+id/tvTempoReservaLabel"
                    style="@style/StyleTextViewLendGame.UserTextHeavy.Label"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:text="@string/tempo_reserva"
                    app:layout_constraintTop_toBottomOf="@+id/tvRequestedBy"
                    app:layout_constraintStart_toStartOf="@id/tvReservado"/>

            <!--TODO-->
            <!-- In this first release the return date always be set to 2 weeks-->
            <TextView
                    android:id="@+id/tvTempoReserva"
                    style="@style/StyleTextViewLendGame.UserTextHeavy.WithShape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_weeks"
                    app:layout_constraintTop_toBottomOf="@+id/tvTempoReservaLabel"
                    app:layout_constraintStart_toStartOf="@id/tvReservado"/>

            <TextView
                    android:visibility="gone"
                    android:textAppearance="@style/TextHeavy.12sp"
                    android:textColor="@color/textColor"
                    android:layout_marginStart="@dimen/margin_default"
                    app:layout_constraintStart_toEndOf="@id/tvTempoReserva"
                    app:layout_constraintTop_toTopOf="@id/tvTempoReserva"
                    app:layout_constraintBottom_toBottomOf="@id/tvTempoReserva"
                    android:background="@drawable/shape_border_rounded_red"
                    android:id="@+id/tvExpired"
                    android:text="@string/loan_state_expired_lower_case"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:lines="1"
                    android:id="@+id/tvDate"
                    style="@style/StyleTextViewLendGame.UserTextMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/date_return_prefix"
                    app:layout_constraintLeft_toRightOf="@+id/tvRequestedBy"
                    app:layout_constraintTop_toTopOf="@+id/tvTempoReserva"
                    app:layout_constraintBottom_toBottomOf="@+id/tvTempoReserva"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/margin_default"/>

            <br.com.concrete.tentacle.custom.StateButtonWhiteView
                    android:id="@+id/btRequestReturn"
                    style="@style/StyleButton.WhiteActive"
                    android:layout_width="0dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    app:buttonName="@string/requestReturn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/btLendGame"
                    android:layout_marginTop="@dimen/dp_40"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/dp_2"
                    android:layout_marginBottom="@dimen/margin_default"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toBottomOf="@id/tvTempoReserva"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <br.com.concrete.tentacle.custom.ButtonView
                    android:id="@+id/btLendGame"
                    style="@style/StyleButton"
                    android:layout_width="0dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    app:buttonName="@string/lendGame"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/btRequestReturn"
                    android:layout_marginTop="@dimen/dp_40"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginBottom="@dimen/margin_default"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toBottomOf="@id/tvTempoReserva"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <include
                    layout="@layout/progress_include"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.Group
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/group"
                    android:visibility="gone"
                    app:constraint_referenced_ids="dashed,gameView,tvReservado,tvRequestedBy,tvTempoReservaLabel,tvTempoReserva,tvDate,tvDateRequested"/>

            <androidx.constraintlayout.widget.Group
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/bottomGroup"
                    android:visibility="gone"
                    app:constraint_referenced_ids="dashed,tvReservado,tvRequestedBy,tvTempoReservaLabel,tvTempoReserva,tvDate,tvDateRequested"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>