...
        been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
        scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
        electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
        Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
        PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="reserved_by">Reservado por</string>
    <string name="requested_by">Solicitado por</string>
    <string name="nome_sobrenome">Nome Sobrenome</string>
    <string name="date_return_prefix">até %1$s</string>
    <string name="date_requested_prefix">em %1$s</string>
    <string name="tempo_reserva">Tempo de reserva</string>
    <string name="lendGame">Jogo entregue</string>
    <string name="gameReturned">Jogo devolvido</string>
    <string name="requestReturn">Solicitar devolução</string>

    <string name="cancel">Cancelar</string>

    <string name="library_loan_text1">Qual a plataforma que você quer reservar?</string>
    <string name="library_loan_register">Qual a plataforma que você quer cadastrar?</string>
...
    <string name="library_loan_user_list_hint">Selecione</string>
    <string name="library_loan_perform_loan">Reservar</string>

    <string name="loan_success">Você acabou de reservar %1$s, aguarde o dono te entregar para começar a curtir o game!
    </string>
    <string name="loan_button_success">Acompanhar suas reservas</string>
    <string name="two_weeks">2 Semanas</string>

    <string name="lend_success">O jogo foi entregue a %1$s e a reserva termina em %2$s.</string>
    <string name="return_success">O jogo foi devolvido e já está disponível novamente na Biblioteca.</string>
    <string name="remember_success">Um email foi enviado para %1$s solicitando a devolução do jogo.</string>
    <string name="back_to_library">Voltar para Biblioteca</string>
    <string name="back_to_my_games">Voltar para Meus Jogos</string>
...
    <string name="delete_dialog_title">Excluir Jogo</string>
    <string name="delete_dialog_message">O jogo %1$s sairá da lista de \"Meus Jogos\", mas você poderá adicioná-lo
        novamente no futuro.
    </string>
    <string name="delete_dialog_error">Ocorreu um erro ao tentar deletar o jogo, por favor tente novamente mais tarde!
    </string>
    <string name="delete">Excluir</string>
    <string name="not_delete">Agora não</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.
    </string>
...
    <string name="delete_dialog_message_reservation">A reserva do jogo %1$s sairá da lista de \"Minhas Reservas\", mas
        você poderá adicioná-lo
        novamente no futuro.
    </string>
    <string name="remove">Remover</string>
    <string name="update">Atualizar</string>
    <string name="reactivate">Reativar</string>
    <string name="reactivate_media">Reativar mídia</string>
    <string name="reactivate_media_dialog_message">O jogo %1$s será reativado e será exibido novamente na lista de \"Meus jogos\".</string>
</resources>

