...
        android:id="@+id/gameViewHeader"
        android:background="@android:color/transparent"
        tools:background="@color/colorPrimary">

    <ImageView
        android:background="@color/activateIcon"
        android:id="@+id/ivGameCover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="@dimen/game_icon_width"
        android:layout_height="@dimen/game_icon_height"/>

    <TextView
        android:maxLines="1"
        android:ellipsize="end"
        android:id="@+id/tvGameName"
        tools:text="Nome do Jogo"
        app:layout_constraintStart_toEndOf="@id/ivGameCover"
        app:layout_constraintEnd_toStartOf="@id/ivGameStatus"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/margin_default"
...
